Removed page writing class from blog content All that's left to do is: 	1. Right-align the blog tab dates 	2. Fix left/right keys to photo library 	3. Add more photos to photo library 	4. Deploy.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   font: 2em "Verdana", "Georgia", sans-serif;
   font-weight : bold;
   text-align : center;
-  margin : 8% 0% 3% 0%;
+  margin : 10% 0% 3% 0%;
 }
 
 .page-writing {
@@ -97,9 +97,9 @@ body {
 .pcontainer .popup-image .close
 {
   position : absolute;
-  top : 0%;
-  right : 0%;
-  margin : 2% 10% 0% 0%;
+  top : 0px;
+  right : 0px;
+  margin : 2% 2% 0% 0%;
 
   font-size : 50px;
   font-weight : bolder;
@@ -179,9 +179,9 @@ body {
 {
   border-style : solid;
   border-color : black;
-  border-radius : 5px;
-  padding : 3% 0%;
-  margin : 3% 0% 3% 0%;
+  border-radius : 10px;
+  padding : 1% 0%;
+  margin : 1% 10%;
 }
 
 @media (max-width: 800px)
